<resources>
    <string name="app_name">MtsTeta</string>
    <string name="category_text_outline">Обводка текста категории фильма</string>
    <string name="main_click_message">Название: %1$s</string>
    <string name="main_empty_message">Тут должен был быть текст</string>
    <string name="star">Звезда</string>
    <string name="movie_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="actors">Актёры</string>
    <string name="jason_statham">Джейсон Стэйтем</string>
    <string name="holt_mccallany">Холт Маккэллани</string>
    <string name="joshua_hartnett">Джош Хартнетт</string>
    <string name="heading_movie_list">Популярно сейчас</string>
    <string name="search">Поиск</string>
    <string name="movie_poster">Постер фильма</string>
    <string name="soon">Скоро</string>
    <string name="rating_bar">rating bar</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_settings">Settings</string>
    <string name="settings">Настройки</string>
    <string name="actor_photo">Фото актёра</string>
    <string name="wrath_of_man_title">Гнев человеческий</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interests">Интересы</string>
    <string name="avatar">Картинка пользователя</string>
    <string name="personal_data">Личные данные</string>
    <string name="name">Имя</string>
    <string name="email">Электронная почта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="notifications_and_sounds">Уведомления и звуки</string>
    <string name="privacy">Конфиденциальность</string>
    <string name="theme">Тема</string>
    <string name="language">Язык</string>
    <string name="data_and_memory">Данные и память</string>
    <string name="application">Приложение</string>
    <string name="ask_a_question">Задать вопрос</string>
    <string name="report_a_problem">Сообщить о проблеме</string>
    <string name="sign_out">Выйти</string>
    <string name="loading_error">Ошибка загрузки. Включите VPN.</string>
    <string name="loading">Загрузка…</string>
    <string name="favorite">Избранное</string>
    <string name="popular_now">Популярно сейчас</string>
    <string name="beginning_link_actors">https://www.themoviedb.org/t/p/w600_and_h900_bestv2</string>
    <string name="beginning_link_movie_card">https://www.themoviedb.org/t/p/w600_and_h900_bestv2</string>
</resources>