<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvUserEmail"
        tools:context=".presentation.fragments.ProfileFragment">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUsername"
            style="@style/fontStyle_1.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tvUserEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivAvatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Константин" />

        <TextView
            android:id="@+id/tvUserEmail"
            style="@style/fontStyle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
            app:layout_constraintStart_toStartOf="@id/tvUsername"
            app:layout_constraintTop_toBottomOf="@id/tvUsername"
            tools:text="konst.89@mail.com" />

        <TextView
            android:id="@+id/tvInterests"
            style="@style/fontStyle_1.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/interests"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActorCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInterests"
            tools:listitem="@layout/item_movie_genres" />

        <TextView
            android:id="@+id/tvPersonalData"
            style="@style/fontStyle_1.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/personal_data"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvActorCard" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPersonalData">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSettings"
            style="@style/fontStyle_1.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/settings"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPhoneNumber" />

        <TextView
            android:id="@+id/tvNotificationSounds"
            style="@style/fontStyle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/notifications_and_sounds"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_tab_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSettings" />

        <TextView
            android:id="@+id/tvPrivacy"
            style="@style/fontStyle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/privacy"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_tab_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNotificationSounds" />

        <TextView
            android:id="@+id/tvTheme"
            style="@style/fontStyle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/theme"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_tab_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrivacy" />

        <TextView
            android:id="@+id/tvLanguage"
            style="@style/fontStyle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/language"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_tab_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTheme" />

        <TextView
            android:id="@+id/tvDataMemory"
            style="@style/fontStyle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/data_and_memory"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_tab_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLanguage" />

        <TextView
            android:id="@+id/tvApplication"
            style="@style/fontStyle_1.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/application"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDataMemory" />

        <TextView
            android:id="@+id/tvAskAQuestion"
            style="@style/fontStyle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/ask_a_question"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_tab_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvApplication" />

        <TextView
            android:id="@+id/tvReportAProblem"
            style="@style/fontStyle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/report_a_problem"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_tab_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAskAQuestion" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignOut"
            style="@style/fontStyle_1.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/sign_out"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReportAProblem"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
