<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_item_movie"
    android:layout_width="165dp"
    android:layout_height="380dp"
    android:background="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMoviePoster"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/tvItemMovieTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivItemMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/ic_image_not_found" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_tv_soon"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/soon"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvItemMovieTitle"
        style="@style/fontStyle_1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:minLines="2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/cvMoviePoster"
        app:layout_constraintTop_toBottomOf="@+id/cvMoviePoster"
        tools:text="@string/wrath_of_man_title" />

    <TextView
        android:id="@+id/tvItemMovieDescription"
        style="@style/fontStyle_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="5"
        android:minLines="5"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/cvMoviePoster"
        app:layout_constraintStart_toStartOf="@id/tvItemMovieTitle"
        app:layout_constraintTop_toBottomOf="@id/tvItemMovieTitle"
        tools:text="@string/movie_description" />

    <RatingBar
        android:id="@+id/rbMovie"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_marginTop="15dp"
        android:isIndicator="true"
        android:numStars="5"
        android:progressDrawable="@drawable/ic_custom_ratingbar"
        android:stepSize="1"
        app:layout_constraintStart_toStartOf="@id/tvItemMovieDescription"
        app:layout_constraintTop_toBottomOf="@id/tvItemMovieDescription" />


    <TextView
        android:id="@+id/tvAgeRestriction"
        style="@style/fontStyle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_movie_item_age_limit"
        android:padding="5dp"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="@id/rbMovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/rbMovie"
        tools:ignore="SmallSp"
        tools:text="18+" />


</androidx.constraintlayout.widget.ConstraintLayout>